--- a/src/Library.Web/Views/Member/Register.cshtml
+++ b/src/Library.Web/Views/Member/Register.cshtml
@@ -1,7 +1,10 @@
 @model Library.Web.Models.Member.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    //Layout = "~/Views/Shared/_Login.cshtml";
 }
+
+<h2>Register</h2>
 
 @using (Html.BeginForm("Register", "Member", FormMethod.Post))
 {
