--- a/src/Library.Web/Views/Shared/_Layout.cshtml
+++ b/src/Library.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Library</title>
     <base href="~/" />
 
-    <link rel="stylesheet" type="text/css" href="~/Content/site.css" />
+    @Styles.Render("~/Content/css")
 </head>
 <body>
     @RenderBody()
