Creating a view for the book details

--- a/src/Library.Web/Views/Member/Login.cshtml
+++ b/src/Library.Web/Views/Member/Login.cshtml
@@ -27,4 +27,8 @@
     {
         <div>@Model.ErrorMessage</div>
     }
+
+    <p>
+        @Html.ActionLink("Register as a new Member", "Register")
+    </p>
 }
