--- a/src/Library.Web/Views/Member/Register.cshtml
+++ b/src/Library.Web/Views/Member/Register.cshtml
@@ -36,4 +36,8 @@
     {
         <div>@Model.ErrorMessage</div>
     }
+
+    <p>
+        @Html.ActionLink("Already registered? Log in", "Login")
+    </p>
 }
