Implementing a view to list the rented books

--- a/src/Library.Web/Views/Book/Details.cshtml
+++ b/src/Library.Web/Views/Book/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Library.Web.Models.Book.BookDetailsViewModel
+﻿@model Library.Web.Models.Book.BookViewModel
 
 @{
     ViewBag.Title = "Books";
