--- a/src/Library.Web/Views/Member/Login.cshtml
+++ b/src/Library.Web/Views/Member/Login.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm("Login", "Member", FormMethod.Post))
+@using (Html.BeginForm("Login", "Member", FormMethod.Post, new { @class = "form" }))
 {
     @Html.AntiForgeryToken()
     <div>
