--- a/src/Library.Web/Views/Member/Register.cshtml
+++ b/src/Library.Web/Views/Member/Register.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Register</h2>
 
-@using (Html.BeginForm("Register", "Member", FormMethod.Post))
+@using (Html.BeginForm("Register", "Member", FormMethod.Post, new { @class = "form" }))
 {
     <div>
         @Html.LabelFor(m => m.Name)
