Creating an action to return a rented book

--- a/src/Library.Web/Views/Book/Index.cshtml
+++ b/src/Library.Web/Views/Book/Index.cshtml
@@ -37,7 +37,7 @@
 
 @if (!string.IsNullOrWhiteSpace(Model.SearchModel.ErrorMessage))
 {
-    <span class="text-danger">Model.SearchModel.ErrorMessage</span>
+    <span class="text-danger">@Model.SearchModel.ErrorMessage</span>
 }
 
 <div>
