--- a/src/Library.Web/Views/Member/Register.cshtml
+++ b/src/Library.Web/Views/Member/Register.cshtml
@@ -1,7 +1,7 @@
 @model Library.Web.Models.Member.RegisterViewModel
 @{
     ViewBag.Title = "Register";
-    //Layout = "~/Views/Shared/_Login.cshtml";
+    Layout = "~/Views/Shared/_Login.cshtml";
 }
 
 <h2>Register</h2>
